# MusicVisualizer

./: .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Info.plist  README.md  audioloopbackstream.cpp  audioloopbackstream.h  audioloopbackstream.mm  audiostream.h  barsdisplay.h  colorutils.h  fft.h  frame.h  frame_old.h  iaudiostream.h  liveaudio.h  macloopbackexample.mm  miniaudio_impl.cpp  music_visualizer_main.cpp  parseargs.h  ppm.h  stringtools.h  test.cpp  vcpkg-configuration.json  vcpkg.json  wavreader.cpp  wavreader_old.cpp
